# ProexpertTask

./: .gitignore  CMakeLists.txt  README.MD  Tests.cpp  Tests.h  combination_counter.cpp  combination_counter.h  main.cpp  read_file.cpp  read_file.h
